--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
-
-    <title>luis suarez</title>
+    <meta name="description" content="LUIS SUAREZ OFFICIAL WEBSITE. ... 
+    Este Sitio Web utiliza cookies, tanto propias como de terceros, para recopilar información" >
+    <meta name="robots" content="index,follow" >
+    <title>Luis Suarez |Sitio oficial de luis suarez </title>
 </head>
 
 <body>
